result/0528-141806/stderr.log
/home/runner/work/pgi-2025-the_harmonic_realms/pgi-2025-the_harmonic_realms/src/features.c: In function ‘max_component’:
/home/runner/work/pgi-2025-the_harmonic_realms/pgi-2025-the_harmonic_realms/src/features.c:89:23: warning: implicit declaration of function ‘toupper’ [-Wimplicit-function-declaration]
   89 |     char comp_upper = toupper(component);
      |                       ^~~~~~~
/home/runner/work/pgi-2025-the_harmonic_realms/pgi-2025-the_harmonic_realms/src/features.c:9:1: note: include ‘<ctype.h>’ or provide a declaration of ‘toupper’
    8 | #include <limits.h>
  +++ |+#include <ctype.h>
    9 | 
/home/runner/work/pgi-2025-the_harmonic_realms/pgi-2025-the_harmonic_realms/src/main.c: In function ‘main’:
/home/runner/work/pgi-2025-the_harmonic_realms/pgi-2025-the_harmonic_realms/src/main.c:41:1: error: version control conflict marker in file
   41 | <<<<<<< HEAD
      | ^~~~~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2